# open-nvr

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  Dockerfile  Makefile  POSITIONING.md  README.md  SECURITY.md  TRADEMARK.md  USER_MANUAL.md  docker-compose.apps.yml  docker-compose.camera-agent.yml  docker-compose.installer.yml  docker-compose.linux.yml  docker-compose.tier0.offline.yml  docker-compose.tier0.yml  docker-compose.yml  docker-entrypoint.sh  mediamtx.docker.yml  mediamtx.local.yml  mediamtx.yml  start.ps1  start.sh
app/: package-lock.json  package.json
examples/abandoned-object/: Dockerfile  README.md  abandoned_object.py  alerts.py  config.docker.yml  config.example.yml  pyproject.toml  zone.py
examples/abandoned-object/tests/: test_abandoned_object.py
examples/alerts-subscriber/: README.md  alerts_subscriber.py  config.example.yml  pyproject.toml
examples/alerts-subscriber/tests/: test_alerts_subscriber.py
examples/camera-agent/: ADAPTER_IMAGES.md  AGENT_DESIGN.md  ALARMS.md  ARCHITECTURE_REVIEW_82.md  Dockerfile  EDITIONS_AND_MODELS.md  FACES.md  MODELS_AND_LATENCY.md  MOONDREAM_PROMOTION.md  NOTIFICATIONS.md  README.md  SCALING_USE_CASES.md  adapter_clients.py  camera_agent.py  config.cloud.yml  config.demo.yml  config.docker.chat.yml  config.docker.combined.yml  config.docker.demo.yml  config.docker.lite.yml  config.docker.llamacpp.yml  config.docker.standard.yml  config.docker.yml  config.example.yml  config.lite.yml  config.standard.yml  context.py  footage_index.py  frame_sources.py  monitor_host.py  pyproject.toml  quickstart.sh  serializer.py  services.py  tasks.yml  tools.py
examples/camera-agent/demo/: index.html
examples/camera-agent/tests/: test_agent_evals.py  test_alarms.py  test_app_alert_relay.py  test_app_door.py  test_auth_gate.py  test_auth_login.py  test_camera_selection.py  test_camera_strip.py  test_chat_frames.py  test_cloud_llm.py  test_config.py  test_context.py  test_converse_integration.py  test_demo_skills_ui.py  test_devices_endpoint.py  test_empty_reply_fallback.py  test_events_feed.py  test_footage_search_tool.py  test_frame_sources.py  test_grounding_and_tools.py  test_hardware.py  test_latency_guards.py  test_latency_harness.py  test_limited_hardware.py  test_line_crossing.py  test_lite_ask.py  test_local_camera.py  test_log_redaction.py  test_monitor_host.py  test_multicam_monitors.py  test_noise_filter.py  test_notifications.py  test_opennvr_camera_reconcile.py  test_persistence.py  test_persona.py  test_ram.py  test_recordings_proxy.py  test_reports.py  test_resilience.py  test_serializer.py  (+8 more)
examples/camera-agent/tools/: latency_harness.py
examples/footage-search/: Dockerfile  README.md  config.docker.yml  config.example.yml  footage_search.py  pyproject.toml  query.py  store.py
examples/footage-search/tests/: test_footage_search.py
examples/home-assistant-relay/: Dockerfile  README.md  config.docker.yml  config.example.yml  ha_mapper.py  home_assistant_relay.py  publishers.py  pyproject.toml
examples/home-assistant-relay/tests/: test_ha_mapper.py  test_publishers.py  test_relay.py
examples/inference-listener/: README.md  config.example.yml  inference_listener.py  pyproject.toml
examples/inference-listener/tests/: test_inference_listener.py
examples/intrusion-detection/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  frame_sources.py  intrusion_detection.py  pyproject.toml  zone.py
examples/intrusion-detection/tests/: test_alerts.py  test_frame_sources.py  test_intrusion_detection.py  test_ws_mode.py  test_zone.py
examples/license-plate-recognition/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  frame_sources.py  license_plate_recognition.py  plate_pipeline.py  pyproject.toml
examples/license-plate-recognition/tests/: test_license_plate_recognition.py  test_plate_pipeline.py
examples/line-crossing/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  line.py  line_crossing.py  pyproject.toml
examples/line-crossing/tests/: test_line_crossing.py
examples/loitering-detection/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  loitering_detection.py  pyproject.toml
examples/loitering-detection/tests/: test_alerts.py  test_loitering_detection.py
examples/occupancy-counting/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  occupancy_counting.py  pyproject.toml  zone.py
examples/occupancy-counting/tests/: test_occupancy_counting.py
examples/package-delivery/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  frame_sources.py  package_delivery.py  package_pipeline.py  pyproject.toml
examples/package-delivery/tests/: test_package_delivery.py  test_package_pipeline.py
examples/smart-doorbell/: Dockerfile  README.md  alerts.py  config.docker.yml  config.example.yml  face_recognition_pipeline.py  pyproject.toml  smart_doorbell.py
examples/smart-doorbell/tests/: test_face_recognition_pipeline.py  test_smart_doorbell.py
kai-c/: README.md  main.py  pyproject.toml
kai-c/kai_c/: audit.py  contract_types.py  correlation.py  events.py  metrics.py  nats_publisher.py  registry.py  sovereignty.py  stream_proxy.py
kai-c/test/: test_audit.py  test_infer_local_contract.py  test_main_v2.py  test_metrics.py  test_nats_publisher.py  test_permissions.py  test_registry.py  test_sovereignty.py  test_startup_config_consent.py  test_stream_proxy.py
sdk/opennvr-app-sdk/: pyproject.toml
sdk/opennvr-app-sdk/opennvr_app_sdk/: __init__.py  alert_subscriber.py  alerts.py  config.py  contract.py  detector.py  frame_app.py  frame_sources.py  geometry.py  manifest.py  nats_loop.py  state.py
sdk/opennvr-app-sdk/tests/: conftest.py  test_alert_subscriber.py  test_alerts.py  test_config.py  test_contract.py  test_detector.py  test_frame_app.py  test_frame_sources.py  test_geometry.py  test_manifest.py  test_state.py  test_tripwire.py
templates/opennvr-app/: Dockerfile  README.md  __APP_MODULE__.py  config.example.yml  pyproject.toml
(+191 files in other folders)
