[project]
name = "kai-c"
version = "1.0.0"
description = "KAI-C (Kavach AI Connector) - Middleware between OpenNVR backend and AI Adapters"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.3",
    "click>=8.3.1",
    "fastapi>=0.109.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
    # A2.4b — websocket client for the /api/v1/infer/{adapter}/stream
    # proxy. ``websockets`` is the pure-Python reference impl; uvicorn
    # bundles it as a server-side dep too, so this is effectively free
    # additional surface.
    # >=13 keeps us on the asyncio-impl-by-default branch
    # (``additional_headers`` is the modern kwarg; 12.x's legacy
    # ``websockets.client.connect`` used ``extra_headers``).
    "websockets>=13.0",
    # NATS publisher for the event-bus broadcast surface
    # (opennvr.inference.* subjects). Best-effort publishing on the
    # /infer + /infer/stream paths; NATS down doesn't break inference.
    "nats-py>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # httpx is only used by the test suite (test_main_v2.py,
    # test_registry.py, test_stream_proxy.py) for FastAPI TestClient
    # plus direct async HTTP calls in the stream-proxy round-trip
    # tests. Runtime KAI-C uses ``requests`` (sync) + ``websockets``
    # (async) — no httpx in the live path.
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
# Async fixtures (e.g. the `registry` fixture in test_registry.py) need
# pytest-asyncio to be in auto mode so they are awaited correctly
# without requiring per-fixture @pytest_asyncio.fixture decoration.
# Consistent with the example apps under open-nvr/examples/.
asyncio_mode = "auto"
