[project]
name = "opennvr-example-abandoned-object"
version = "1.0.0"
description = "OpenNVR abandoned-object example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
abandoned-object = "abandoned_object:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
