[project]
name = "opennvr-example-alerts-subscriber"
version = "1.0.0"
description = "OpenNVR alerts-subscriber example app (B1-alerts — NATS-subscribing alert consumer)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Deliberately minimal — meant as a clean copy-as-template for
# community contributors. nats-py for the subscribe loop, httpx for
# optional webhook forwarding, PyYAML for config. No frame fetching,
# no inference driving — this app rides the alert fan-out stream other
# apps already publish.
dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
alerts-subscriber = "alerts_subscriber:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
