[project]
name = "opennvr-example-alerts-subscriber"
version = "1.0.0"
description = "OpenNVR alerts-subscriber example app (NATS-subscribing alert consumer)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (nats-py subscribe loop, PyYAML
# config, httpx) — see docs/design/app-sdk-spec.html. This example is
# the reference AlertSubscriber archetype: what's left in-repo is the
# sink (print + optional webhook forward) plus its config parsing.
dependencies = [
    "opennvr-app-sdk",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
alerts-subscriber = "alerts_subscriber:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
