[project]
name = "opennvr-example-camera-agent"
version = "1.0.0"
description = "OpenNVR camera-agent example — a voice agent that grounds its answers in live camera feeds via tool calling. Pipecat + Silero VAD + Whisper + Ollama + Piper, CPU-friendly."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Pipecat handles the conversational orchestration (VAD, turn
# detection, streaming, tool calling). httpx talks to our adapters.
# nats-py taps the inference event bus for the recent_events tool.
# Pillow re-encodes camera frames to JPEG for the vision adapters.
dependencies = [
    "pipecat-ai[silero,websocket]>=0.0.55,<1.0",
    "httpx>=0.27,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "nats-py>=2.6",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
