[project]
name = "opennvr-example-camera-agent"
version = "1.0.0"
description = "OpenNVR camera-agent example — a voice agent that grounds its answers in live camera feeds via tool calling. Pipecat + Silero VAD + Whisper + Ollama + Piper, CPU-friendly."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Pipecat handles the conversational orchestration (VAD, turn
# detection, streaming, tool calling). httpx talks to our adapters.
# nats-py taps the inference event bus for the recent_events tool.
# Pillow re-encodes camera frames to JPEG for the vision adapters.
#
# Pipecat is pinned to the 0.0.5x series. We use ``FrameSerializerType``
# and the keyword-kwargs ``InputAudioRawFrame(audio=, sample_rate=,
# num_channels=)`` constructor, both of which were removed/reworked
# in the 0.0.10x series (verified live: pipecat-ai 0.0.108 deletes
# ``FrameSerializerType`` from ``pipecat.serializers.base_serializer``,
# which collapses the import block in ``serializer.py`` to stubs and
# turns ``InputAudioRawFrame(...)`` into ``object(...)`` →
# ``TypeError: object() takes no arguments``). When upstream
# stabilises 1.x, port ``serializer.py`` and bump this pin in lock-
# step; until then the upper bound prevents pip from drifting onto
# the new API.
dependencies = [
    "pipecat-ai[silero,websocket]>=0.0.55,<0.0.60",
    "httpx>=0.27,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "nats-py>=2.6",
    "Pillow>=10.0",
    # App SDK convergence (app-sdk-spec §07): create_monitor's count/
    # crossing watches instantiate SDK detectors (the occupancy-counting
    # and line-crossing example rule classes) via monitor_host.MonitorHost
    # instead of the bespoke poll loops.
    "opennvr-app-sdk",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
# Local capture-device cameras (device:0 / webcam / drone /dev/video) need
# OpenCV. Headless build = no GUI libs, right for servers/containers
# (test-report cross-cutting #3). Imported lazily so the rest works without it.
device = [
    "opencv-python-headless>=4.8",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
