[project]
name = "opennvr-example-footage-search"
version = "1.0.0"
description = "OpenNVR footage-search example app (natural-language search over recorded inference history)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# nats-py for the indexer subscribe loop, httpx for the optional Ollama
# query parser, PyYAML for config. SQLite is in the stdlib. No kai-c
# imports — the event schema is documented JSON.
dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
footage-search = "footage_search:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
