[project]
name = "opennvr-example-home-assistant-relay"
version = "1.0.0"
description = "OpenNVR home-assistant-relay example app — bridges OpenNVR alerts into Home Assistant entities via MQTT discovery or the HA REST API."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# nats-py for the alert subscription; paho-mqtt for the MQTT-
# discovery backend; httpx for the REST-API backend. PyYAML for
# config loading. Pillow is NOT used here — this example only
# touches alert envelopes, never camera frames.
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "nats-py>=2.6,<3.0",
    "paho-mqtt>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
