[project]
name = "opennvr-example-home-assistant-relay"
version = "1.0.0"
description = "OpenNVR home-assistant-relay example app — bridges OpenNVR alerts into Home Assistant entities via MQTT discovery or the HA REST API."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (nats-py subscribe loop, PyYAML
# config, httpx for the REST backend) — see docs/design/app-sdk-spec.html.
# paho-mqtt stays app-side: the MQTT-discovery backend is this
# bridge's business, not the SDK's. Pillow is NOT used here — this
# example only touches alert envelopes, never camera frames.
dependencies = [
    "opennvr-app-sdk",
    "paho-mqtt>=2.0,<3.0",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
home-assistant-relay = "home_assistant_relay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
