[project]
name = "opennvr-example-intrusion-detection"
version = "1.0.0"
description = "OpenNVR intrusion-detection example app"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (httpx KAI-C calls + webhooks, PyYAML
# config, nats-py alert fan-out, the FrameApp poll loop, frame sources,
# zone geometry) — see docs/design/app-sdk-spec.html. websockets stays
# local: the §6 streaming-mode path through KAI-C's
# /api/v1/infer/{adapter}/stream proxy (opt-in via
# ``kaic_transport: ws`` in config) is unique to this example.
dependencies = [
    "opennvr-app-sdk",
    "websockets>=13.0",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
intrusion-detection = "intrusion_detection:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
