[project]
name = "opennvr-example-license-plate-recognition"
version = "1.0.0"
description = "OpenNVR license-plate-recognition example app — drives YOLOv8 + fast-plate-ocr via KAI-C"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Deliberately minimal — the example is meant to be a clean
# template for community contributors. httpx for the KAI-C calls,
# PyYAML for config, nats-py for the optional alert fan-out, and
# Pillow for cropping the vehicle bbox before the OCR call.
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "nats-py>=2.6",
    "Pillow>=10.0,<12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
