[project]
name = "opennvr-example-line-crossing"
version = "1.0.0"
description = "OpenNVR line-crossing (tripwire) example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Deliberately minimal — a clean copy-as-template for contributors.
# nats-py for the subscribe loop, httpx for optional alert webhooks,
# PyYAML for config. No frame fetching (we ride upstream's tracked
# inference results) and no kai-c imports.
dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
line-crossing = "line_crossing:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
