[project]
name = "opennvr-example-line-crossing"
version = "1.0.0"
description = "OpenNVR line-crossing (tripwire) example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (nats-py subscribe loop, httpx alert
# webhooks, PyYAML config) and the tripwire geometry — see
# docs/design/app-sdk-spec.html. What's left in-repo is the rule (the
# per-track crossing test) plus this app's config parsing.
dependencies = [
    "opennvr-app-sdk",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
line-crossing = "line_crossing:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
