[project]
name = "opennvr-example-loitering-detection"
version = "1.0.0"
description = "OpenNVR loitering-detection example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Deliberately minimal — meant as a clean copy-as-template for
# community contributors. nats-py for the subscribe loop, httpx
# for optional alert webhooks, PyYAML for config. No frame fetching
# (we ride upstream's inference results) and no kai-c imports
# (the event schema is documented JSON, not a shared library).
dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
loitering-detection = "loitering_detection:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Consistent with the inference-listener example. The current test
# suite is sync, but future async tests (e.g. the NATS round-trip)
# won't need a per-file decorator.
asyncio_mode = "auto"
