[project]
name = "opennvr-example-loitering-detection"
version = "1.0.0"
description = "OpenNVR loitering-detection example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (nats-py subscribe loop, httpx alert
# webhooks, PyYAML config) — see docs/design/app-sdk-spec.html. This
# example is the reference migration: what's left in-repo is the rule
# (the dwell state machine) plus this app's config parsing.
dependencies = [
    "opennvr-app-sdk",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
loitering-detection = "loitering_detection:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Consistent with the inference-listener example. The current test
# suite is sync, but future async tests (e.g. the NATS round-trip)
# won't need a per-file decorator.
asyncio_mode = "auto"
