[project]
name = "opennvr-example-occupancy-counting"
version = "1.0.0"
description = "OpenNVR occupancy-counting example app (NATS-subscribing monitoring app)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# Deliberately minimal — a clean copy-as-template for contributors.
# nats-py for the subscribe loop, httpx for optional alert webhooks,
# PyYAML for config. No frame fetching (we ride upstream's inference
# results) and no kai-c imports (the event schema is documented JSON).
dependencies = [
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
occupancy-counting = "occupancy_counting:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
