[project]
name = "opennvr-example-package-delivery"
version = "1.0.0"
description = "OpenNVR package-delivery example app — porch package arrive / pick-up state machine driven by YOLOv8 through KAI-C"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (httpx KAI-C calls + webhooks, PyYAML
# config, nats-py alert fan-out, the FrameApp poll loop and frame
# sources) — see docs/design/app-sdk-spec.html. Pillow stays local:
# reading frame dimensions is this app's pipeline concern.
dependencies = [
    "opennvr-app-sdk",
    "Pillow>=10.0",
]

[tool.uv.sources]
opennvr-app-sdk = { path = "../../sdk/opennvr-app-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors the optional-dependencies group so a plain ``uv sync`` gets a
# test-ready environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
