# Copyright (c) 2026 OpenNVR
# SPDX-License-Identifier: Apache-2.0

[project]
name = "opennvr-app-sdk"
version = "0.1.0"
description = "Shared SDK for OpenNVR monitoring apps: §11.5 alert dispatch, zone geometry, keyed TTL state, app manifests, and the Detector / FrameApp base loops."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# The SDK owns the dependencies every app used to re-declare:
# nats-py for the inference-subscribe loop + alert fan-out, httpx for
# webhooks + KAI-C infer calls, PyYAML for config loading.
dependencies = [
    "PyYAML>=6.0,<7.0",
    "nats-py>=2.6",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opennvr_app_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
