[project]
name = "opennvr-app-__APP_ID__"
version = "0.1.0"
description = "__APP_NAME__ — an OpenNVR Detector app"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

# The SDK owns the runtime stack (nats-py subscribe loop, httpx alert
# webhooks, PyYAML config). What's left in your app is the rule.
dependencies = [
    "opennvr-app-sdk",
]

# Editable path dep on the in-repo SDK. The generator fills in the path
# from your app to sdk/opennvr-app-sdk (relative when the app lives in
# the repo under examples/<id>/, absolute for an out-of-tree --dest). If
# you move the app, repoint this at a published opennvr-app-sdk instead.
[tool.uv.sources]
opennvr-app-sdk = { path = "__SDK_PATH__", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

# Mirrors optional-dependencies so a plain ``uv sync`` gets a test-ready
# environment (uv installs the ``dev`` group by default).
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
__APP_ID__ = "__APP_MODULE__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
